--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/hr-team-jacob/V-Campaign-Pledge-Proxy/issues"
   },
-  "homepage": "https://github.com/hr-team-jacob/V-Campaign-Pledge-Proxy#readme"
+  "homepage": "https://github.com/hr-team-jacob/V-Campaign-Pledge-Proxy#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.11",
+    "path": "^0.12.7"
+  }
 }
